--- a/index.html
+++ b/index.html
@@ -1,27 +1,15 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <title>Scroll</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="scroll.css"></style>
   </head>
   <body>
-    <!-- SCROLL DOWN TEXT -->
-    <div class="scroll-down-text-container">
-      <h2 class="scroll-down-text">
-        Scroll Down &nbsp; <span class="down-arrow">⤵️</span>
-      </h2>
-    </div>
-
-    <!-- SECOND APPLE-LIKE EFFECT -->
-    <div class="bottom-page-element-container">
-      <div class="bottom-page-element">Nice effect, right?</div>
-    </div>
-
-    <!-- FIRST APPLE-LIKE EFFECT -->
-    <canvas id="hero-lightpass" />
-
-    <script src="script.js"></script>
-  </body>
+  <canvas id="scrollAnimation"></canvas>
+  <p id="copyExample">AirPods</p>
+  <script src="./scroll.js"></script>
+</body>
 </html>
